Re-organized project folder structure Updated folder path and import references Updated recommender module calculation Re-named database field names Updated database with complete dataset Updated database query and references in Flask Changed 'preferences' to 'query' as 'query' is more descriptive of the per session search result

--- a/SystemCode/frontend/templates/favourites.html
+++ b/SystemCode/frontend/templates/favourites.html
@@ -20,10 +20,10 @@
         <div class="row">
             <h1>Favourited courses</h1>
         </div>
-        {% if favCourseList|length == 0 %}
+        {% if fav_list|length == 0 %}
             <h5>You do not have any favourite courses.</h5>
         {% endif %}
-        {% for course in favCourseList %}
+        {% for course in fav_list %}
             <div class="container-fluid">
                 <div class="row">
                     <div class="panel panel-default" style="border:1px solid">
@@ -40,7 +40,7 @@
                                 <p>Language: {{ course.language }} | Subtitles: {{course.subtitle}}</p>
                                 <p>Difficulty: {{ course.difficulty }}</p>
                                 <p>Duration: {{ course.duration }}</p>
-                                <p>{{ course.freeOption }}</p>
+                                <p>{{ course.free_option }}</p>
                                 <a href="{{ course.link }}" class="btn btn-primary">More info</a>
                                 <button id="swapHeart" class="btn btn-default swap">
                                     <span class="glyphicon glyphicon-heart" style="color:red;box-shadow:none;"></span>
