--- a/SystemCode/frontend/templates/results.html
+++ b/SystemCode/frontend/templates/results.html
@@ -15,7 +15,7 @@
                 <div class="panel panel-default" style="border:1px solid">
                     <div class="row justify-content-center">
                         <div class="col-md-4">
-                            <img class="panel-img rounded" src={{course.imageLink}} alt="Card image cap">
+                            <img class="panel-img rounded" src={{course.image_url}} alt="Card image cap">
                         </div>
                         <div class="col-md-8">
                         <div class="panel-heading">
@@ -30,7 +30,7 @@
                                 <h6>{{ course.free_option }}</h6>
                             </div>
                             <div class="col-md-3">
-                                <a href="{{ course.link }}" class="btn btn-primary pull-right">More info</a>
+                                <a href="{{ course.url }}" class="btn btn-primary pull-right">More info</a>
                                 {% if course.courseID in favlist%}
                                     <button class="btn btn-default swap pull-right">
                                         <span class="glyphicon glyphicon-heart" style="color:red;box-shadow:none;"></span>
