Fixed issue with database updates when redirecting from query to result page Fixed the cards alignment on result.html

--- a/SystemCode/frontend/templates/results.html
+++ b/SystemCode/frontend/templates/results.html
@@ -35,16 +35,19 @@
                                     <button class="btn btn-default swap pull-right">
                                         <span class="glyphicon glyphicon-heart" style="color:red;box-shadow:none;"></span>
                                     </button>
+                                    <input type="button" value="Unlike" class="unlike" id="unlike_{{course.courseID}}" />
                                 {% else %}
                                     <button class="btn btn-default swap pull-right">
                                         <span class="glyphicon glyphicon-heart-empty" style="box-shadow:none;"></span>
                                     </button>
+                                    <input type="button" value="Like" class="like" id="like_{{course.courseID}}" />
                                 {% endif %}
                             </div>
-                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
+            </div>
         {% endfor %}
 
 {% endblock %}
