Fixed issue with database updates when redirecting from query to result page Fixed the cards alignment on result.html Improved the performance of the recommender algorithm Added in codes to handle where there is no courses recommended Shifted all navbar codes to jumbo.html

--- a/SystemCode/frontend/templates/jumbo.html
+++ b/SystemCode/frontend/templates/jumbo.html
@@ -8,24 +8,39 @@
       <a class="btn btn-default btn-lg" href = "{{ url_for('index') }}" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="{{ url_for('signup') }}" role="button">Register</a>
       <a class="btn btn-default btn-lg" href="{{ url_for('login') }}" role="button">Log in</a>
-    {% endif %}
-    {% if login %}
+    {% elif login %}
       <p>Log in to your MOOC recommendation account here</p>
       <a class="btn btn-default btn-lg" href = "{{ url_for('index') }}" role="button">Home</a>
       <a class="btn btn-default btn-lg" href="{{ url_for('signup') }}" role="button">Register</a>
       <a class="btn btn-primary btn-lg" href="{{ url_for('login') }}" role="button">Log in</a>
-    {% endif %}
-    {% if index %}
+    {% elif index %}
       <p>This is the MOOC recommendation system. Login or register to get your personalized course recommendation :)</p>
       <a class="btn btn-primary btn-lg" href="{{ url_for('index') }}" role="button">Home</a>
       <a class="btn btn-default btn-lg" href="{{ url_for('signup') }}" role="button">Register</a>
       <a class="btn btn-default btn-lg" href="{{ url_for('login') }}" role="button">Log in</a>
-    {% endif %}
-    {% if not signup and not login and not index %}
+    {% elif home %}
         <a class="btn btn-primary btn-lg" href = "{{ url_for('home') }}" role="button">Home</a>
-        <a class="btn btn-default btn-lg" href="{{ url_for('preferences') }}" role="button">Get Personalized Recommendation</a>
+        <a class="btn btn-default btn-lg" href="{{ url_for('query') }}" role="button">Get Personalized Recommendation</a>
         <a class="btn btn-default btn-lg" href = "{{ url_for('favourites') }}" role="button">My favourites</a>
         <a class="btn btn-default btn-lg" href = "{{ url_for('history') }}" role="button">History</a>
+        <a class="btn btn-default btn-lg" href="{{ url_for('logout') }}">Logout</a>
+    {% elif query %}
+        <a class="btn btn-default btn-lg" href = "{{ url_for('home') }}" role="button">Home</a>
+        <a class="btn btn-primary btn-lg" href="{{ url_for('query') }}" role="button">Get Personalized Recommendation</a>
+        <a class="btn btn-default btn-lg" href = "{{ url_for('favourites') }}" role="button">My favourites</a>
+        <a class="btn btn-default btn-lg" href = "{{ url_for('history') }}" role="button">History</a>
+        <a class="btn btn-default btn-lg" href="{{ url_for('logout') }}">Logout</a>
+    {% elif favourites %}
+        <a class="btn btn-default btn-lg" href = "{{ url_for('home') }}" role="button">Home</a>
+        <a class="btn btn-default btn-lg" href="{{ url_for('query') }}" role="button">Get Personalized Recommendation</a>
+        <a class="btn btn-primary btn-lg" href = "{{ url_for('favourites') }}" role="button">My favourites</a>
+        <a class="btn btn-default btn-lg" href = "{{ url_for('history') }}" role="button">History</a>
+        <a class="btn btn-default btn-lg" href="{{ url_for('logout') }}">Logout</a>
+    {% elif history %}
+        <a class="btn btn-default btn-lg" href = "{{ url_for('home') }}" role="button">Home</a>
+        <a class="btn btn-default btn-lg" href="{{ url_for('query') }}" role="button">Get Personalized Recommendation</a>
+        <a class="btn btn-default btn-lg" href = "{{ url_for('favourites') }}" role="button">My favourites</a>
+        <a class="btn btn-primary btn-lg" href = "{{ url_for('history') }}" role="button">History</a>
         <a class="btn btn-default btn-lg" href="{{ url_for('logout') }}">Logout</a>
     {% endif %}
   </div>
