--- a/SystemCode/frontend/templates/query.html
+++ b/SystemCode/frontend/templates/query.html
@@ -1,19 +1,7 @@
 {% extends 'base.html' %}
 
-
 {% block navbar %}
-<div class="jumbotron">
-  <div class="container">
-          <h1>Welcome{% if current_user.username %} {{current_user.name}}{% endif %}!</h1>
-          {% if not signup and not login and not index %}
-        <a class="btn btn-default btn-lg" href = "{{ url_for('home') }}" role="button">Home</a>
-        <a class="btn btn-primary btn-lg" href="{{ url_for('preferences') }}" role="button">Get Personalized Recommendation</a>
-        <a class="btn btn-default btn-lg" href = "{{ url_for('favourites') }}" role="button">My favourites</a>
-        <a class="btn btn-default btn-lg" href = "{{ url_for('history') }}" role="button">History</a>
-        <a class="btn btn-default btn-lg" href="{{ url_for('logout') }}">Logout</a>
-    {% endif %}
-  </div>
-</div>
+    {% include 'jumbo.html' %}
 {% endblock %}
 
 {% block app_content %}
