--- a/SystemCode/frontend/templates/base.html
+++ b/SystemCode/frontend/templates/base.html
@@ -13,36 +13,54 @@
     {%- block styles %}
     <!-- Bootstrap -->
     <link href="{{bootstrap_find_resource('css/bootstrap.css', cdn='bootstrap')}}" rel="stylesheet">
-    <!--    <link rel="stylesheet" href="style.css">-->
+    <style>
+    .glyphicon.glyphicon-heart{
+      color:red;
+      box-shadow:none;
+    }
+    .glyphicon.glyphicon-heart-empty{
+      box-shadow:none;
+    }
+    </style>
     {%- endblock styles %}
 
     {%- endblock head %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!--    <script src="scripts.js"></script>-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!--    <script src="scripts.js"></script>-->
     <script type="text/javascript">
       $(document).ready(function(){
-        $(".like, .unlike").click(function(){
-          var split_id = this.id.split('_');
-          var text = split_id[0];
-          var course_id = split_id[1];
+
+        $("button").click(function(event){
+          event.preventDefault();
+          $(this).find('span').toggleClass("glyphicon glyphicon-heart-empty");
+          $(this).find('span').toggleClass("glyphicon glyphicon-heart");
+        });
+
+        $(".favouriteButton").click(function(){
+          var course_id =this.id;
           var type = 0;
-          if(text=='like'){
-              type=1;
+          var text = $(this).find('span').attr('class')
+          console.log(course_id)
+          console.log(type)
+          console.log(text)
+          if(text=="glyphicon glyphicon-heart"){
+              type = 1;
           }else{
               type = 0;
           }
 
-          $.ajax({
+           $.ajax({
             url:'/likeunlike',
             type:'post',
             data:{course_id:course_id,type:type},
             dataType:'json',
             success:function(data){
-
             }
           });
         });
+
       });
     </script>
   </head>
