Added in open browser automation Changed the 'more info' button for course to open a new browser tab when clicked instead of navigating to the page in current browser

--- a/SystemCode/frontend/templates/favourites.html
+++ b/SystemCode/frontend/templates/favourites.html
@@ -30,7 +30,7 @@
                                 <p>Difficulty: {{ course.difficulty }}</p>
                                 <p>Duration: {{ course.duration }}</p>
                                 <p>{{ course.free_option }}</p>
-                                <a href="{{ course.url }}" class="btn btn-primary">More info</a>
+                                <a href="{{ course.url }}" class="btn btn-primary" target="_blank" rel="noopener noreferrer">More info</a>
                                 <button id="{{course.courseID}}" class="btn btn-default swap favouriteButton">
                                     <span class="glyphicon glyphicon-heart"></span>
                                 </button>
