--- a/SystemCode/frontend/templates/results.html
+++ b/SystemCode/frontend/templates/results.html
@@ -30,7 +30,7 @@
                                 <h6>{{ course.free_option }}</h6>
                             </div>
                             <div class="col-md-3">
-                                <a href="{{ course.url }}" class="btn btn-primary pull-right">More info</a>
+                                <a href="{{ course.url }}" class="btn btn-primary pull-right" target="_blank" rel="noopener noreferrer">More info</a>
                                     <button class="btn btn-default swap pull-right favouriteButton" type="button"  id="{{course.courseID}}">
                                     {% if course.courseID in favlist %}
                                         <span class="glyphicon glyphicon-heart"></span>
