--- a/SystemCode/frontend/templates/base.html
+++ b/SystemCode/frontend/templates/base.html
@@ -64,7 +64,7 @@
       });
     </script>
   </head>
-  <body>{% block body_attribs %}{% endblock body_attribs %}
+  <body style="background-color:#f2f2f2">{% block body_attribs %}{% endblock body_attribs %}
     {% block body -%}
     {% block navbar %}
     {%- endblock navbar %}
