--- a/SystemCode/frontend/templates/signup.html
+++ b/SystemCode/frontend/templates/signup.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block navbar %}
+    <div class="jumbotron" style="background-color:#c8d8e4">
     {% include 'jumbo.html' %}
+    </div>
 {% endblock %}
 
 {% block app_content %}
