--- a/SystemCode/frontend/templates/base.html
+++ b/SystemCode/frontend/templates/base.html
@@ -21,6 +21,11 @@
     .glyphicon.glyphicon-heart-empty{
       box-shadow:none;
     }
+    .panel-img {
+      width: 100%;
+      height: 8vw;
+      object-fit: cover;
+    }
     </style>
     {%- endblock styles %}
 
