--- a/SystemCode/frontend/templates/base.html
+++ b/SystemCode/frontend/templates/base.html
@@ -23,7 +23,7 @@
     }
     .panel-img {
       width: 100%;
-      height: 8vw;
+      height: 100%;
       object-fit: cover;
     }
     </style>
