--- a/SystemCode/frontend/templates/signup.html
+++ b/SystemCode/frontend/templates/signup.html
@@ -7,16 +7,20 @@
 {% endblock %}
 
 {% block app_content %}
- <h1>Sign up</h1>
- <br>
- <div class="row">
-   <div class="col-md-6">
-    {% import 'bootstrap/wtf.html' as wtf %}
-       {{ wtf.quick_form(form) }}
-   </div>
- </div>
-<div>
-    <p></p>
+<h2>Sign up</h2>
+<br>
+<div class="container" style="background-color:white">
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            {% import 'bootstrap/wtf.html' as wtf %}
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
+    <div>
+        <br>
     <a href="{{ url_for('login') }}">Already have an account? Log in here</a>
+    </div>
+    <br>
 </div>
 {% endblock %}
