--- a/SystemCode/frontend/templates/index.html
+++ b/SystemCode/frontend/templates/index.html
@@ -19,8 +19,8 @@
                         </div>
                         <div class="col-md-8">
                         <div class="panel-heading">
-                                <h3 class="panel-title">{{ course.title }}</h3>
-                                <h6>{{ course.platform }} | offered by {{course.provider}}</h6>
+                            <h3 class="panel-title"><b>{{ course.title }}</b></h3>
+                            <h6><b><i>{{ course.platform }} | offered by {{course.provider}}</i></b></h6>
                         </div>
                         <div class="panel-body">
                             <div class="col-md-9">
